Updated the Copyright

--- a/aboutus.html
+++ b/aboutus.html
@@ -6,7 +6,10 @@
 </head>
 
 <body style="width:960px;margin:0 20px;">
-<p><img src="images/header.gif" alt="" width="960" height="235"></p>
+<p>
+    <img src="images/header.gif" alt="" width="960" height="235">
+</p>
+
 <p>
 	<a href="index.html"><img src="images/nav_home.gif" width="147" height="26" alt=""></a> 
 	<a href="aboutus.html"><img src="images/nav_aboutus.gif" width="147" height="26" alt=""></a> 
