--- a/contactus.html
+++ b/contactus.html
@@ -8,14 +8,15 @@
 <body style="width:960px;margin:0 20px;">
 <p><img src="images/header.gif" alt="" width="960" height="235"></p>
 <p>
-  <a href="index.html"><img src="images/nav_home.gif" width="147" height="26" alt=""></a> 
-  <a href="aboutus.html"><img src="images/nav_aboutus.gif" width="147" height="26" alt=""></a> 
-  <a href="solutions.html"><img src="images/nav_solutions.gif" width="147" height="26" alt=""></a> 
-  <a href="contactus.html"><img src="images/nav_contactus.gif" width="147" height="26" alt=""></a>
+  <a href="index.html"> <img src="images/nav_home.gif" width="147" height="26" alt=""></a> 
+  <a href="aboutus.html"> <img src="images/nav_aboutus.gif" width="147" height="26" alt=""></a> 
+  <a href="solutions.html"> <img src="images/nav_solutions.gif" width="147" height="26" alt=""></a> 
+  <a href="contactus.html"> <img src="images/nav_contactus.gif" width="147" height="26" alt=""></a>
 </p>
 
 <h2>Contact Us</h2>
-<p> Vecta Corp. HQ<br>
+<p> 
+  Vecta Corp. HQ<br>
   555 Technology Pl.<br>
   San Diego, CA 92555<br>
   (555) 555-5555 
