--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <p><em>Throughout the years we have worked with Vecta Corporation, we have always been amazed at the level of dedication and professionalism that they have provided us and our WGDC products. It is this commitment that has increased both our income and exposure exponentially.</em></p>
     <p>Zak Ruvalcaba<br>
     Founder and CEO<br>
-    <a href="http://www.modulemedia.com">Module Media</a></p>
+    <a href="http://www.modulemedia.com" target="_blank">Module Media</a></p>
     
     <hr>
     <p>Copyright &copy; 2016 - All Rights Reserved</p>
